[metadata]
name = py-profiler
version = 0.0.2
author = Andy Le
author_email = tauit.dnmd@gmail.com
description = A library to measure your method, function execution time.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/andy1xx8/py-profiler
project_urls =
    Bug Tracker = https://github.com/andy1xx8/py-profiler/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent